cabal-version: 2.2
name: containers
version: 0.8
license: BSD-3-Clause
license-file: LICENSE
maintainer: libraries@haskell.org
homepage: https://github.com/haskell/containers
bug-reports: https://github.com/haskell/containers/issues
synopsis: Assorted concrete container types
category: Data Structures
description:
    .
    This package contains efficient general-purpose implementations
    of various immutable container types including sets, maps, sequences,
    trees, and graphs.
    .
    For a walkthrough of what this package provides with examples of common
    operations see the [containers
    introduction](https://haskell-containers.readthedocs.io).
    .
    The declared cost of each operation is either worst-case or amortized, but
    remains valid even if structures are shared.

build-type: Simple
extra-doc-files:
    changelog.md
extra-source-files:
    include/containers.h
    mkappend.hs

tested-with:
  GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 ||
      ==9.4.8 || ==9.6.6 || ==9.8.4 || ==9.10.3 || ==9.12.2 || ==9.14.1

source-repository head
    type:     git
    location: https://github.com/haskell/containers

Library
    default-language: Haskell2010
    build-depends:
        base >= 4.10 && < 5
      , array >= 0.4.0.0
      , deepseq >= 1.4.3.0 && < 1.6
    -- template-haskell-lift was added as a boot library in GHC-9.14
    -- once we no longer wish to backport releases to older major releases,
    -- this conditional can be dropped
    if impl(ghc >= 9.14)
       build-depends: template-haskell-lift >= 0.1 && <0.2
    elif impl(ghc)
       build-depends: template-haskell
    hs-source-dirs: src
    ghc-options: -O2 -Wall

    other-extensions: CPP, BangPatterns

    exposed-modules:
        Data.Containers.ListUtils
        Data.IntMap
        Data.IntMap.Lazy
        Data.IntMap.Strict
        Data.IntMap.Strict.Internal
        Data.IntMap.Internal
        Data.IntMap.Internal.Debug
        Data.IntMap.Merge.Lazy
        Data.IntMap.Merge.Strict
        Data.IntSet.Internal
        Data.IntSet.Internal.IntTreeCommons
        Data.IntSet
        Data.Map
        Data.Map.Lazy
        Data.Map.Merge.Lazy
        Data.Map.Strict.Internal
        Data.Map.Strict
        Data.Map.Merge.Strict
        Data.Map.Internal
        Data.Map.Internal.Debug
        Data.Set.Internal
        Data.Set
        Data.Graph
        Data.Sequence
        Data.Sequence.Internal
        Data.Sequence.Internal.Sorting
        Data.Tree

    other-modules:
        Utils.Containers.Internal.Prelude
        Utils.Containers.Internal.State
        Utils.Containers.Internal.Strict
        Utils.Containers.Internal.PtrEquality
        Utils.Containers.Internal.EqOrdUtil
        Utils.Containers.Internal.BitUtil
        Utils.Containers.Internal.BitQueue

    include-dirs: include
